--- a/aais-site/src/containers/Home.css
+++ b/aais-site/src/containers/Home.css
@@ -1,19 +1,23 @@
-html { 
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url("../images/robonaut.jpeg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+@import url('https://fonts.googleapis.com/css?family=Roboto:100');
+
+html, body{
     height: 100%;
-    overflow: hidden;
 }
 
-.Home-title {
-    font-size: 1.5em;
-    color: white;
+body {
+    background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5)), url("../images/robonaut.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-  
-.Home-intro {
-    font-size: large;
+
+
+
+.Home-welcome {
+    padding-top: 200px;
     color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
+    text-align: center;
 }
