--- a/aais-site/src/containers/Home.css
+++ b/aais-site/src/containers/Home.css
@@ -19,5 +19,6 @@ body {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-size: 50px;
+    font-weight: 100;
     text-align: center;
 }
