--- a/aais-site/src/containers/Home.css
+++ b/aais-site/src/containers/Home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100');
 
+/*
 html, body{
     height: 100%;
 }
@@ -11,9 +12,34 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+*/
 
+/* Set background image */
+.Home {
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 320px;
+      
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+      
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
 
+    background-image: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5)), url("../images/robonaut.jpeg");
+    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -10;
+    
+}
 
+/* Set welcome font*/
 .Home-welcome {
     padding-top: 200px;
     color: white;
