--- a/aais-site/src/containers/AboutUs.css
+++ b/aais-site/src/containers/AboutUs.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Sofia');
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
 .Intro{
     max-height: 500px;
     min-height: 300px;
-    background-color: crimson;
+    background-color: #2980B9;
 }
 .Intro-welcome{
-    font-family: 'Sofia', cursive;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 50px;
     text-align: center;
     padding: 10px;
@@ -36,7 +35,8 @@
 }
 
 .Officers-title{
-    font-family: 'Sofia', cursive;
+    padding: 10px;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 50px;
     text-align: center;
 }
