--- a/aais-site/src/containers/ContactUs.css
+++ b/aais-site/src/containers/ContactUs.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Sofia');
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
 
 .ContactUs-welcome{
-    font-family: 'Sofia', cursive;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 50px;
     text-align: center;
     padding: 10px;
