--- a/aais-site/src/containers/AboutUs.css
+++ b/aais-site/src/containers/AboutUs.css
@@ -30,13 +30,24 @@
     color: white;
 }
 
+
 .Officers{
-    min-height: 500px;
+    display: flex;
+    justify-content: center;
 }
+
 
 .Officers-title{
     padding: 10px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 50px;
     text-align: center;
+}
+
+.Officer{
+    position: relative;
+    display: block;
+    float: left;
+    padding: 10px;
+    margin: 0 5px;
 }
